# ollama-notebookllm

./: .env.backup  .env.example  .env.local  .env.test  CHANGELOG.md  COMPLETE_SETUP_GUIDE.md  CRAWLING_BUG_FIX.md  CREATE_CRAWL_JOBS_TABLE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  OBSERVABILITY_DASHBOARD_FIX.md  PLAYWRIGHT_TEST_REPORT.md  POSTGRESQL_DEBUG_PROMPT.md  POSTGRESQL_FIX_SUMMARY.md  POSTGRESQL_SOLUTION.md  PR_BODY.md  QUICKSTART_TOPIC_DISCOVERY.md  RELEASE_SUMMARY.md  SETUP_COMPLETE.md  TESTING_SUMMARY.md  TOPIC_DISCOVERY_IMPLEMENTATION.md  TROUBLESHOOTING_FIX.md  add_completed_at_column.sql  check_processes.ps1  crawl_jobs_table.sql  debug_search.py  diagnose_crawling.py  docker-compose.local.yml  integration_test_results.json  list_services.ps1  local_network_setup_results.json  pg_hba.conf  pyproject.toml  pytest.ini  ragflow_setup_results.json  test_db_connection.py  test_end_to_end.py  test_results.txt  test_storage.py  test_topic_discovery.py
.claude/: agents  settings.local.json
docs/: LOCAL_NETWORK_SETUP.md  MEMORY_OPTIMIZED_SETUP.md  RAGFLOW_INTEGRATION.md
examples/: topic_discovery_example.py
scripts/: add_crawl_jobs_table.sql  add_missing_column.py  auto_setup_supabase.py  bootstrap_topic.py  complete_test_suite.py  create_crawl_jobs.py  create_supabase_tables.py  final_verification.py  generate_supabase_sql.py  learn_typescript.py  setup_local_network.py  setup_ragflow_integration.py  setup_supabase.py  test_integration.py  test_rag_integration.py  test_supabase_ready.py
src/notebookllama/: Home.py  documents.py  ragflow_integration.py  server.py
tests/: test_document_disconnect.py  test_document_management.py  test_playwright_simple.py  test_playwright_ui.py  test_sql_engine.py
(+15 files in other folders)
